方块落到底部功能实现 已实现的功能： 1. WorkArea类修改为GameArea类。 2. 记住了落到底部的方块组成的“墙”。 3. 往左、往右或向下移动时，碰到墙体将无法移动。 下一步： 1. 方块每过一段时间就自动下落一行。

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
-venv
+venv/*
+.idea/workspace.xml
+__pycache__/
+/venv/Lib/site-packages/pip-9.0.1-py3.5.egg/pip/_vendor/lockfile/symlinklockfile.py
+/venv/Lib/site-packages/pygame/tests/sprite_test.py
+/venv/Lib/site-packages/pygame/tests/mixer_music_tags.py
+/venv/Lib/site-packages/pygame/examples/data/danger.gif
